sumo/tests/duarouter/trips/errors/vehicle_empty_arrivalpos/errors.duarouter
Error: Attribute 'arrivalPos' in definition of a trip is empty.
Error: Invalid arrivalPos definition for vehicle '';
 must be one of ("random", "max", or a float)
Quitting (on error).
